src/styles/styles.css
/************************************/
/* GLOBAL RESET */
/************************************/
*,
*::after,
*::before {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/*************************************/
/* GLOBAL STYLING */
/*************************************/
html {
  font-size: 62.5%;
  background-color: rgb(32, 33, 36);
  color: rgb(231, 228, 239);
  font-family: "Roboto", sans-serif;
}

img {
  size: 100%;
}

.container {
  max-width: 80%;
  margin: 1rem auto;
  padding: 1rem 4rem;
  border-radius: 1.2rem;
  display: flex;
  justify-content: space-between;
}

/*************************************/
/* HEADER STYLING */
/*************************************/
.header {
  justify-content: flex-start;
  background-color: rgb(54, 48, 158);
}
.logo-link {
  display: flex;
  align-items: center;
  gap: 2rem;

  border-radius: 1.2rem;
}
.logo-link:link,
.logo-link:visited {
  text-decoration: none;
  color: rgb(231, 228, 239);
}

.logo-img {
  width: 10rem;
  border-radius: 1.2rem;
}

.logo-text {
  font-size: 3rem;
  letter-spacing: 0.1rem;
  font-weight: 500;
  transition: all ease-in-out 0.3s;
}
.logo-text:hover {
  letter-spacing: 0.25rem;
}

/*************************************/
/* MAIN STYLING */
/*************************************/
.main {
  display: block;
  position: relative;
  margin-top: 10rem;
}
.section-main {
  margin: 0 auto;
}

.tiles-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  margin: 25rem auto;

  max-width: 60rem;
  transform: rotate(45deg);
  border: 1px solid rgb(54, 48, 158);
}

.tile {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 3rem;
  border: 1px solid rgb(54, 48, 158);
  aspect-ratio: 1/1;
}

.tile-text {
  transform: rotate(-45deg);
}

.meteor {
  width: 6rem;
  aspect-ratio: 1/1;
  border-radius: 50%;
}

.yellow {
  position: absolute;
  width: 35rem;
  top: -3%;
  left: 0;

  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid rgb(235, 231, 38);
  z-index: 1;
}
.yellow-img {
  width: 20%;
  border-radius: 50%;
  aspect-ratio: 1/1;
  pointer-events: none;

  background-image: url("./../imgs/yellow-meteor.jfif");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  z-index: 1;
}

.blue {
  position: absolute;
  top: 10%;
  right: 10%;

  background-image: url("./../imgs/blue-meteor.jfif");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  z-index: 1;
}
/*************************************/
/* FOOTER STYLING */
/*************************************/
.footer {
  padding: 2rem 4rem;
  font-size: 1.4rem;
  font-weight: 500;
  background-color: rgb(54, 48, 158);
}

.contact-me_link,
.contact-me_link:link,
.contact-me_link:visited {
  display: inline-block;
  text-decoration: none;
  color: rgb(231, 228, 239);
  transition: transform 0.3s;
}

.contact-me_link:hover,
.contact-me_link:active {
  text-decoration: underline;
  transform: scale(1.1);
}

